# cmakeqt

./: CMakeLists.txt  main.cpp
